2.0.0_15 (yyyy-mm-dd)

    API / Behaviour Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - Avoid heavy use of 'return' statements

    Bug Fixes:
        - None.

    Dependencies:
        - None.

    Packaging:
        - Need at least OptArgs2 v2.0.0 for diff-bifcode2 test.
        - Add Test2::Requires::Module to cpanfile

2.0.0_14 (2022-02-02)

    Bug Fixes:
        - Document limitations of decoding large numbers.

    Dependencies:
        - Need at least version 1.999723 of Math::BigInt for the
          bdstr() and bnstr() methods.

2.0.0_13 (2022-02-01)

    New Features:
        - New infinity types INF and NEGINF
        - New Not a number type NAN

2.0.0_12 (2022-01-17)

    API / Behaviour Changes:
        - Rename Bifcode::V2 to Bifcode2

    Dependencies:
        - Add development dep on Text::Table::Tiny for t/synopsis.pl
        - Suggest on develop dep OptArgs2 for bin/diff-bifcode

    Packaging:
        - Split Bifcode::V1 back into its own Bifcode distribution

2.0.0_11 (2022-01-14)

    API / Behaviour Changes:
        - All V2 functions now named like encode_bifcodeV2()

    Bug Fixes:
        - Several documentation fixes for previous Bifcode to
          Bifcode::V2 naming change
        - Use Bifcode::V2 in (previously broken) diff-bifcode

    Packaging:
        - Change to semver versioning

2.000_10 (2020-01-31)

    Bug Fixes:
        - Fix up missing Bifcode -> Bifcode::V2 changes in t/

2.000_9 (2020-01-30)

    API / Behaviour Changes:
        - Rename Bifcode -> Bifcode::V2 so that it is explicitly
          obvious which version is in use.

    Enhancements:
        - More idomatic and robust tests for AnyEvent::Handle support

    Packaging:
        - Set ExtUtils::MakeMaker RECURSIVE_TEST_FILES
        - Add a test script to compare Bifcode vs Bifcode::V1
          performance

2.000_8 (2019-11-13)

    Dependencies:
        - Hopefully support Perl 5.12 by not using "package BLOCK" in