@@ -18,6 +18,7 @@
     Packaging:
         - Need at least OptArgs2 v2.0.0 for diff-bifcode2 test.
         - Add Test2::Requires::Module to cpanfile
+        - Avoid triggering old bugs in Math::BigInt.
 
 2.0.0_14 (2022-02-02)
 
